# PAM

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
backend/src/: auth.ts  config.ts  credential-store.ts  credentials.ts  db.ts  index.ts  metrics.ts  oidc.ts  ports.ts  rate-limit.ts  saml.ts  schemas.ts  seed.ts  server.ts  totp.ts  vault.ts
backend/test/: auth.test.ts  client-ip.test.ts  credentials.test.ts  oidc.test.ts  ports.test.ts  rate-limit.test.ts  schemas.test.ts  totp.test.ts  trust-proxy.test.ts
docs/: api-contract.md  architecture.md  auth-enterprise.md  database-model.md  delivery-plan.md  deployment.md  function-audit.md  phase1-poc.md  phase2-mvp.md  phase3-security.md  phase4-operation.md  phase5-jit.md  phase5-mfa.md  phase5-recording.md  phase5-sso.md  phase5-vencrypt.md  rdp-integration-p1-runbook.md  rdp-p0-evidence-template.md  rdp-smoke-runbook.md  risks-and-dependencies.md  security-requirements.md  session-flow.md
docs/adr/: 0001-pivot-multiprotocolo.md  0002-kdf-scrypt.md  0003-auth-enterprise.md  0004-adapter-registry.md  0005-rdp-engine.md  0006-rdp-worker-spike.md
docs/protocols/: rdp-worker-spike.md  rdp.md  vnc.md
docs/threat-models/: rdp.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  server.mjs
frontend/public/: admin.html  admin.js  app.js  index.html  replay.html  replay.js  style.css
gateway/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
gateway/src/: byte-stream-types.ts  byte-stream.ts  config.ts  db.ts  handshake.ts  index.ts  metrics.ts  recorder.ts  (+5 more)
infra/: .env.example  docker-compose.yml
rdp-worker/: .gitignore  CMakeLists.txt  Dockerfile  README.md
rdp-worker/cmake/: FreeRDP.cmake  freerdp-pin.cmake
rdp-worker/harness/: CMakeLists.txt  lab-targets.example.json  main.cpp
rdp-worker/include/privion/rdp/: config.hpp  credential.hpp  freerdp_client.hpp  lab_guard.hpp  lifecycle.hpp  log_redaction.hpp  policy.hpp  secure_buffer.hpp  uds_server.hpp
rdp-worker/scripts/: augment-sbom.py  build.sh  generate-sbom.sh  p0-evidence-secret-scan.py  pin-freerdp.sh  run-p0.sh  run-selftest.sh  validate-sbom.py
rdp-worker/src/: config.cpp  credential.cpp  freerdp_client.cpp  lab_guard.cpp  lifecycle.cpp  log_redaction.cpp  main.cpp  policy.cpp  secure_buffer.cpp  uds_server.cpp
rdp-worker/tests/: config_test.cpp  credential_test.cpp  lab_guard_test.cpp  lifecycle_test.cpp  log_redaction_test.cpp  policy_test.cpp  privion_test.hpp  run-p0-script-test.sh  secure_buffer_test.cpp  uds_server_test.cpp
scripts/: README.md  backup-db.sh  gen-certs.sh
tests/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+55 files in other folders)
